--- a/mediaprocessor/config/defaults.ini
+++ b/mediaprocessor/config/defaults.ini
@@ -3,8 +3,8 @@
     ffprobe = /usr/local/bin/ffprobe
     threads = auto
 [Languages]
-    audio = eng, fra
-    subtitle = eng, fra
+    audio = eng, fre
+    subtitle = eng, fre
     tagging = eng
 [Tagging]
     tagfile = True
@@ -23,13 +23,30 @@
         preopts = None
         postopts = None
         [[[video]]]
-            accepted_track_formats = hevc
+            accepted_track_formats = h264, h265, hevc
+            default_format = hevc
+            prefer_copy = True
+        [[[audio]]]
+            accepted_track_formats = aac, ac3, dts, eac3
+            default_format = aac
+            force_create_tracks = None
+            prefer_copy = True
+        [[[subtitle]]]
+            accepted_track_formats = mov_text,
+            default_format = mov_text
+            prefer_copy = True
+    [[matroska]]
+        post_processors = None
+        preopts = None
+        postopts = None
+        [[[video]]]
+            accepted_track_formats = h264, h265, hevc
             default_format = hevc
             prefer_copy = True
         [[[audio]]]
             accepted_track_formats = aac, ac3
             default_format = aac
-            force_create_tracks = aac
+            force_create_tracks = None
             prefer_copy = True
         [[[subtitle]]]
             accepted_track_formats = mov_text,
@@ -37,76 +54,108 @@
             prefer_copy = True
 [StreamFormats]
     [[theora]]
-        Bitrate = -1
         PixFmt = None,
+        Bitrate = -1
+        Height = -1
+        Width = -1
+        Level = -1.0
+        Profile = High,
         Tag = None
     [[h264]]
-        Bitrate = -1
         PixFmt = None,
-        Tag = None
+        Bitrate = -1
+        Height = -1
+        Width = -1
+        Level = -1.0
         Profile = High,
-        Level = -1.0
+        Tag = None
     [[hevc]]
-        Bitrate = -1
         PixFmt = None,
-        Tag = hvc1
-        Profile = main,
+        Bitrate = -1
+        Height = -1
+        Width = -1
         Level = -1.0
+        Profile = High,
+        Tag = hvc1
     [[divx]]
-        Bitrate = -1
         PixFmt = None,
+        Bitrate = -1
+        Height = -1
+        Width = -1
+        Level = -1.0
+        Profile = High,
         Tag = None
     [[vp8]]
-        Bitrate = -1
         PixFmt = None,
+        Bitrate = -1
+        Height = -1
+        Width = -1
+        Level = -1.0
+        Profile = High,
         Tag = None
     [[h263]]
-        Bitrate = -1
         PixFmt = None,
+        Bitrate = -1
+        Height = -1
+        Width = -1
+        Level = -1.0
+        Profile = High,
         Tag = None
     [[flv]]
-        Bitrate = -1
         PixFmt = None,
+        Bitrate = -1
+        Height = -1
+        Width = -1
+        Level = -1.0
+        Profile = High,
         Tag = None
     [[mpeg1]]
-        Bitrate = -1
         PixFmt = None,
+        Bitrate = -1
+        Height = -1
+        Width = -1
+        Level = -1.0
+        Profile = High,
         Tag = None
     [[mpeg2]]
-        Bitrate = -1
         PixFmt = None,
+        Bitrate = -1
+        Height = -1
+        Width = -1
+        Level = -1.0
+        Profile = High,
         Tag = None
     [[vorbis]]
-        Bitrate = -1
         Channels = -1
+        Bitrate = -1
         Tag = None
     [[aac]]
-        Bitrate = 120
-        Channels = 2
+        Channels = -1
+        Bitrate = -1
         Tag = None
     [[mp3]]
-        Bitrate = -1
         Channels = -1
+        Bitrate = -1
         Tag = None
     [[mp2]]
-        Bitrate = -1
         Channels = -1
+        Bitrate = -1
         Tag = None
     [[ac3]]
-        Bitrate = -1
         Channels = -1
+        Bitrate = -1
         Tag = None
     [[eac3]]
-        Bitrate = -1
         Channels = -1
+        Bitrate = -1
         Tag = None
     [[dts]]
-        Bitrate = -1
         Channels = -1
+        Bitrate = -1
         Tag = None
     [[flac]]
-        Bitrate = -1
         Channels = -1
+        Bitrate = -1
         Tag = None
     [[movtext]]
         Tag = None
@@ -121,6 +170,8 @@
     [[dvbsub]]
         Tag = None
     [[webvtt]]
+        Tag = None
+    [[pgs]]
         Tag = None
 [PreferredEncoders]
     aac = aac
