Fixed bitrate option to reject 0 values Implemented progress report Added pgssub to list of image codecs Added dvd_subtitle to list of image codecs

--- a/mediaprocessor/config/defaults.ini
+++ b/mediaprocessor/config/defaults.ini
@@ -27,9 +27,9 @@
             default_format = hevc
             prefer_copy = True
         [[[audio]]]
-            accepted_track_formats = aac, ac3, dts, eac3
+            accepted_track_formats = aac, ac3, eac3
             default_format = aac
-            force_create_tracks = None
+            force_create_tracks = aac
             prefer_copy = True
         [[[subtitle]]]
             accepted_track_formats = mov_text,
@@ -130,8 +130,8 @@
         Bitrate = -1
         Tag = None
     [[aac]]
-        Channels = -1
-        Bitrate = -1
+        Channels = 2
+        Bitrate = 320
         Tag = None
     [[mp3]]
         Channels = -1
